Updates from Overleaf

--- a/thesis/paper/sections/4_implementation.tex
+++ b/thesis/paper/sections/4_implementation.tex
@@ -36,7 +36,7 @@ Apart from flexbox-based positioning, Intertext layout system also supports abso
 \begin{figure}
   \centering
   \includegraphics[width=13cm]{thesis/paper/images/responsive.png}
-  \caption{Flexbox system}%
+  \caption{Flex-box system}%
   \label{fig:absolute_positioning}%
 \end{figure}
 
@@ -125,9 +125,9 @@ Grid is an another layout component that can be used to render its children in g
 
 \subsection{Typography}
 
-There are multiple components for typography, most of which are based off of the \texttt{text} component. All components for typography stems from the \texttt{text} component, but for ease of use, we defined aliases that utilizes the \texttt{text} component with a set configuration. The properties that the \texttt{text} component accepts are \texttt{p}, \texttt{h1}, \texttt{h2}, \texttt{h3}, \texttt{b}, \texttt{i}, \texttt{u}, \texttt{block}, \texttt{muted}, \texttt{code} and \texttt{intent}. \texttt{p} stands for paragraph, which is used to define a paragraph block. \texttt{h1}, \texttt{h2}, \texttt{h3} represents headings, and their respective number represents the heading level. The behaviour is similar to HTML. \texttt{b}, \texttt{i}, \texttt{u} are styling options, represents bold, italics and underlined respectively. \texttt{muted} renders the text with a muted color, useful for descriptions, subtexts or any secondary text that needs to be less attention grabbing. \texttt{code} renders the text with a light background and with monospace font family, should be used with codes. 
+There are multiple components for typography, most of which are based off of the \texttt{text} component. All components for typography stems from the \texttt{text} component, but for ease of use, we defined aliases that utilises the \texttt{text} component with a set configuration. The properties that the \texttt{text} component accepts are \texttt{p}, \texttt{h1}, \texttt{h2}, \texttt{h3}, \texttt{b}, \texttt{i}, \texttt{u}, \texttt{block}, \texttt{muted}, \texttt{code} and \texttt{intent}. \texttt{p} stands for paragraph, which is used to define a paragraph block. \texttt{h1}, \texttt{h2}, \texttt{h3} represents headings, and their respective number represents the heading level. The behaviour is similar to HTML. \texttt{b}, \texttt{i}, \texttt{u} are styling options, represents bold, italics and underlined respectively. \texttt{muted} renders the text with a muted colour, useful for descriptions, subtexts or any secondary text that needs to be less attention grabbing. \texttt{code} renders the text with a light background and with monospace font family, should be used with codes. 
 
-By default, the \texttt{text} component renders inline, meaning, the render output of \texttt{<text>1</text><text>2</text>} will appear side by side, as \texttt{12}. However, this behaviour changes for block-level properties; \texttt{p}, \texttt{h1}, \texttt{h2} and \texttt{h3}. \texttt{text} components that has these properties will take up the full line, and any other text component before or after them will fall into a new line. \texttt{block} property is a way to prevent text from rendering inline, without giving it any particular style. Text component also accepts \texttt{intent} property, which renders the text with the a color given its intent. Last but not least, the text component can accept all layout properties just like any other component. The aliases that can be used in place of \texttt{text} are \texttt{p}, \texttt{h1}, \texttt{h2} and \texttt{h3} which will render a \texttt{text} component with the respective styles applied. All properties that the text component accepts can be used together to combine styles. For instance, a configuration such as \texttt{intent="error", b="true", u="true", h2="true" muted="true"} will result as a red h2 tag, muted, that is bold and underlined.
+By default, the \texttt{text} component renders inline, meaning, the render output of \texttt{<text>1</text><text>2</text>} will appear side by side, as \texttt{12}. However, this behaviour changes for block-level properties; \texttt{p}, \texttt{h1}, \texttt{h2} and \texttt{h3}. \texttt{text} components that has these properties will take up the full line, and any other text component before or after them will fall into a new line. \texttt{block} property is a way to prevent text from rendering inline, without giving it any particular style. Text component also accepts \texttt{intent} property, which renders the text with the a colour given its intent. Last but not least, the text component can accept all layout properties just like any other component. The aliases that can be used in place of \texttt{text} are \texttt{p}, \texttt{h1}, \texttt{h2} and \texttt{h3} which will render a \texttt{text} component with the respective styles applied. All properties that the text component accepts can be used together to combine styles. For instance, a configuration such as \texttt{intent="error", b="true", u="true", h2="true" muted="true"} will result as a red h2 tag, muted, that is bold and underlined.
 
 \subsection{Literals}
 
@@ -182,15 +182,15 @@ Input component can be used to take text based input from the user. The type of 
 
 \subsection{Image}
 
-This command can be used to display images on the screen, for platforms that can support displaying images. It takes \texttt{src} attribute to accept the image URI, and a textual identifier for the image as \texttt{alt} attribute to display for platforms that cannot support images, such as the Intertext command-line client. At the time of the writing, the only acceptable way to display images in Intertext clients is to serve the images from the same origin. This is a result of the same origin policy as our privacy requirements. So for instance if IUIDL codes are being served from \texttt{example.com} and the \texttt{src} attribute is provded as \texttt{/assets/image.png}, Intertext client will try to load the image from \texttt{example.com/assets/image.png}. We have future plans of allowing assets to be loaded from remote servers after permission is granted by the user, which is explained in \nameref{futureWork}.
+This command can be used to display images on the screen, for platforms that can support displaying images. It takes \texttt{src} attribute to accept the image URI, and a textual identifier for the image as \texttt{alt} attribute to display for platforms that cannot support images, such as the Intertext command-line client. At the time of the writing, the only acceptable way to display images in Intertext clients is to serve the images from the same origin. This is a result of the same origin policy as our privacy requirements. So for instance if IUIDL codes are being served from \texttt{example.com} and the \texttt{src} attribute is provided as \texttt{/assets/image.png}, Intertext client will try to load the image from \texttt{example.com/assets/image.png}. We have future plans of allowing assets to be loaded from remote servers after permission is granted by the user, which is explained in \nameref{futureWork}.
 
 \section{Commands}
 
-Similar to the components, commands also are registered to the engine. However the registration of the commands are more dynamic compared to the components; while components are static and are immediately available right after the initialization, some commands rely on other artifacts to be available before they are able to be registered. For instance on the web client, the commands related to the client state requires the root component to be mounted, therefor they can only be registered after the mounting occurs. These requirements changes from client to client based on the platform requirements.
+Similar to the components, commands also are registered to the engine. However the registration of the commands are more dynamic compared to the components; while components are static and are immediately available right after the initialisation, some commands rely on other artefacts to be available before they are able to be registered. For instance on the web client, the commands related to the client state requires the root component to be mounted, therefor they can only be registered after the mounting occurs. These requirements changes from client to client based on the platform requirements.
 
 \subsection{State}
 
-State command is used to set the state or retrieve read a value from the state. This command is expected to be registered to the engine by each Intertext client based on how the state is handled on the host platform. For instance, for the web client, the client state is controlled by the root React component, therefore it can only be initialized once the component is initialized and mounted on screen. 
+State command is used to set the state or retrieve read a value from the state. This command is expected to be registered to the engine by each Intertext client based on how the state is handled on the host platform. For instance, for the web client, the client state is controlled by the root React component, therefore it can only be initialised once the component is initialised and mounted on screen. 
 
 State command accepts \texttt{key} attribute, which takes the key of the state variable. The children of the state command takes the value of the state to be set. Unlike other commands, state command can also be used as a component to display state values on the screen. When the state command is used without providing a value, Intertext engine reads the state value, and interprets it as a literal value, uses the \texttt{literalRenderer} to display it on the screen. Additionally it takes the attribute \texttt{clear} to clear the state value. When this attribute is provided, Intertext client will clear the value instead of printing it even when no children is provided. Last but not least, state command takes the attribute \texttt{persist} to target the persisted storage instead of the volatile storage. All attributes work the exact same way when \texttt{persist} attribute is provided, only difference being that it runs against the persisted storage. Figure \ref{fig:how_state_is_set_and_read} shows the syntax of how setting and reading the state works.
 
