--- a/thesis/paper/sections/5_evaluation.tex
+++ b/thesis/paper/sections/5_evaluation.tex
@@ -133,7 +133,7 @@ In this section, we explain how we conducted our user study for user evaluation.
 
 We conducted our user study in the form of surveys. We used Google Forms to create the survey and manage the responses. In the surveys, we first gave some information and/or material to investigate, then followed it with likert scale questions.
 
-We utilized Amazon's Mechanical Turk (MTurk) service in order to find participants. We stated the description and intentions of each survey on their respective survey page. Some of our surveys required special skills, for which we used features provided by MTurk that enables us to only target participants with special skills. We set the compensation price per answer to 10 cents for general participation surveys, and 50 cents for surveys that requires special skills. We required our participants to enter their \textit{worker id} both on the surveys and on the respective survey page on MTurk, so that we can match the responses of the participants with their MTurk profiles to verify only our intended audience has participated, and duplicate/third party responses are eliminated.
+We utilised Amazon's Mechanical Turk (MTurk) service in order to find participants. We stated the description and intentions of each survey on their respective survey page. Some of our surveys required special skills, for which we used features provided by MTurk that enables us to only target participants with special skills. We set the compensation price per answer to 10 cents for general participation surveys, and 50 cents for surveys that requires special skills. We required our participants to enter their \textit{worker id} both on the surveys and on the respective survey page on MTurk, so that we can match the responses of the participants with their MTurk profiles to verify only our intended audience has participated, and duplicate/third party responses are eliminated.
 
 Our user evaluation was conducted in two stages. First stage was to validate the problems in our problem statement that we are intending to solve, and the second stage was to validate Intertext, the solution we offer in order to address these problems. 
 
@@ -176,7 +176,7 @@ In the first phase, we received 119 responses (after filtering out duplicate ans
 \begin{figure}[H]
   \centering
   \includegraphics[width=13cm]{thesis/paper/images/p1_q1.pdf}
-  \textbf{Question:} I experience UI / UX inconsistencies in some applications
+  \textbf{Question:} I experience UI/UX inconsistencies in some applications
 \end{figure}
 
 \begin{figure}[H]
@@ -206,7 +206,7 @@ In the first phase, we received 119 responses (after filtering out duplicate ans
 \begin{figure}[H]
   \centering
   \includegraphics[width=13cm]{thesis/paper/images/p1_q6.pdf}
-  \textbf{Question:} I'm often frustrated with ads on mobile / desktop apps
+  \textbf{Question:} I'm often frustrated with ads on mobile/desktop apps
 \end{figure}
 
 \begin{figure}[H]
@@ -218,25 +218,25 @@ In the first phase, we received 119 responses (after filtering out duplicate ans
 \begin{figure}[H]
   \centering
   \includegraphics[width=13cm]{thesis/paper/images/p1_q8.pdf}
-  \textbf{Question:} I wish I was able to customise the appearances of websites / applications.
+  \textbf{Question:} I wish I was able to customise the appearances of websites/applications.
 \end{figure}
 
 \begin{figure}[H]
   \centering
   \includegraphics[width=13cm]{thesis/paper/images/p1_q9.pdf}
-  \textbf{Question:} I wish I could choose or create a universal theme that would apply to all websites / applications
+  \textbf{Question:} I wish I could choose or create a universal theme that would apply to all websites/applications
 \end{figure}
 
 \begin{figure}[H]
   \centering
   \includegraphics[width=13cm]{thesis/paper/images/p1_q10.pdf}
-  \textbf{Question:} Applications I use on a daily basis are mostly available on all my devices / platforms
+  \textbf{Question:} Applications I use on a daily basis are mostly available on all my devices/platforms
 \end{figure}
 
 \begin{figure}[H]
   \centering
   \includegraphics[width=13cm]{thesis/paper/images/p1_q11.pdf}
-  \textbf{Question:} Occasionally I have to use desktop applications that are not optimised for small screens / touch interfaces on my phone
+  \textbf{Question:} Occasionally I have to use desktop applications that are not optimised for small screens/touch interfaces on my phone
 \end{figure}
 
 \begin{figure}[H]
