--- a/thesis/paper/sections/abstract.tex
+++ b/thesis/paper/sections/abstract.tex
@@ -2,6 +2,6 @@
 
 \section*{Abstract} \label{abstract}
 
-Today, we often see the same repeating patterns in front-end systems, from the components that make up the user interface to features and practices such as navigation, routing and state management. It is not uncommon for these patterns to be re-implemented time and again in various shapes or forms. Due to the lack of a systematic enforcement mechanism in the open market, these implementations' correctness and completeness rely primarily on the developer. A proper online representation nowadays requires accessible front-end applications with best practices optimised for various devices, browsers, screens and platforms, often resulting in high costs or inconsistent, insecure and low-quality byproducts. From a users perspective, this entails a poor user experience and bring potential security and privacy concerns. 
+Today, we often see the same repeating patterns in front-end systems, from the components that make up the user interface to features and practices such as navigation, routing and state management. It is not uncommon for these patterns to be re-implemented time and again in various shapes or forms. Due to the lack of a systematic enforcement mechanism in the open market, these implementations' correctness and completeness rely primarily on the developer. A proper online representation nowadays requires accessible front-end applications with best practices optimised for various devices, browsers, screens and platforms, often resulting in high costs or inconsistent, insecure and low-quality byproducts. From a user's perspective, this entails a poor user experience and bring potential security and privacy concerns. 
 
-To address these problems, we propose Intertext, a novel approach to how front-end systems are developed and consumed. It consists of Intertext User Interface Description Language (IUIDL): a device, design and style agnostic XML-based markup language; and a family of software clients for web, mobile, desktop and various other platforms that can render IUIDL into fully functional front-ends. IUIDL provides essential building blocks, such as a layout system, User Interface (UI) components and commands. It incorporates both input and output components, which can be used in conjunction with commands to make applications interactive. Commands enable sending, receiving and handling data, managing application state, routing and much more. It supports interpolations and views derived from the application state. IUIDL can be assembled and served from a generic backend, where the business logic of the application shall live. Once served from an endpoint, users can access it through any Intertext client on any device or platform in a similar fashion to an internet browser. Clients receive and render IUIDL most appropriately based on the host device and platform. It allows users to browse all their data sources through the same familiar, stable, robust, accessible screen/device optimised interface. IUIDL is agnostic of style, so users can customise the application's look and feel to their liking. Most importantly, clients do not accept executable code from external sources and all interactions with the device and external servers are controlled, which guarantees safety and privacy to the users. Intertext aims to stand as an alternative to traditional front-end systems that significantly benefits both the user and the data provider.
+To address these problems, we propose Intertext, a novel approach to how front-end systems are developed and consumed. It consists of Intertext User Interface Description Language (IUIDL); device, design and style agnostic XML-based markup language, and a family of software clients for web, mobile, desktop and various other platforms that can render IUIDL into fully functional front-ends. IUIDL provides essential building blocks, such as a layout system, User Interface (UI) components and commands. It incorporates both input and output components, which can be used in conjunction with commands to make applications interactive. Commands enable sending, receiving and handling data, managing application state, routing and much more. IUIDL can be assembled and served from a generic backend, where the business logic of the application shall live. Once served from an endpoint, users can access it through any Intertext client on any device or platform in a similar fashion to an Internet browser. Clients receive and render IUIDL most appropriately based on the host device and platform. It allows users to browse all their data sources through the same familiar, stable, robust, accessible screen/device optimised interface. IUIDL is agnostic of style, so users can customise the application's look and feel to their liking. Most importantly, clients do not accept executable code from external sources and all interactions with the device and external servers are controlled, which guarantees safety and privacy to the users. Intertext aims to stand as an alternative to traditional front-end systems that significantly benefits both the user and the developer.
