--- a/thesis/paper/thesis.tex
+++ b/thesis/paper/thesis.tex
@@ -54,12 +54,12 @@
  \pagenumbering{arabic}
 
 % Sections
-\input{sections/1_introduction/index}
-\input{sections/2_relatedWork/index} 
-\input{sections/3_solution/index}
-\input{sections/4_implementation/index}
-\input{sections/5_evaluation/index}
-\input{sections/7_discussion/index}
+\input{sections/1_introduction}
+\input{sections/2_relatedWork} 
+\input{sections/3_solution}
+\input{sections/4_implementation}
+\input{sections/5_evaluation}
+\input{sections/6_discussion}
 
 % Appendix (optional)
 \newpage
