--- a/thesis/paper/sections/2_relatedWork.tex
+++ b/thesis/paper/sections/2_relatedWork.tex
@@ -1,4 +1,8 @@
-% !TEX root = ../../thesis.tex
+% !TEX root = ../thesis.tex
+
+\chapter{Related Work} \label{relatedWork}
+
+This section explores and discusses the state-of-the-art research, tools, and technologies in the field of user interface development. First, we focus on existing UIDLs and how they compare to Intertext. We categorise them to demonstrate the relevancy as coherently as possible and investigate the ones that fall into the same category as Intertext on a case-by-case basis. Then, we look into libraries and frameworks that aim to achieve a similar goal as Intertext. We will explain how Intertext is extending the existing solutions to do what it does. Moreover, we will explore commercially available tools and services and discuss why they are relevant to Intertext and what is to be learned from their efforts and success.
 
 \section{UIDLs} \label{relatedUIDLs}
 
@@ -43,3 +47,30 @@ Nonetheless, if we were to take a step back to look at the big picture, Intertex
 
   \item Intertext, in general, is a platform that comes with Intertext UIDL (IUIDL) and software clients that can interpret and render it. It has no intention of generating a UI that can run independently.
 \end{enumerate}
+
+\section{Frameworks and Libraries} \label{relatedTools}
+
+The issue of cross-platform development has long been an active research topic, especially after the rise of popularity in mobile devices, tablets and wearable technologies. There has been number of solutions that aims to solve this issue, and the traditional approach is hybrid application development. The idea of hybrid application development is to have a single codebase that can either run on multiple devices, or compile into an application that can natively run on multiple devices. Around this concept there has been many tools and libraries, and it has been gaining traction in the recent days.
+
+One of the most notable example to these libraries is React Native. React Native is a mobile application framework that works under React, and generates UI elements native to the platform that the code is being compiled against. Once an application is built with React Native, it can be compiled as a native iOS or an Android application \cite{ReactNative}. Another framework recently gaining traction is Flutter by Google, it takes the hybrid application development to the next level by supporting web, mobile environments and popular desktop environments \cite{Flutter}.
+
+
+\section{Tools and Services} \label{relatedTools}
+
+Over the past couple of years, there has been a significant shift towards no-code tools and services that aims to allow non-technical users with no development or engineering background to build products or automate tasks that would have normally required assistance from engineers with technical skills. This movement lead to the rise of a new category of products; products allows users to create front-end applications without front-end development. There are variety of different products that falls into this category, and there are different approaches taken by these products to achieve similar goals.
+
+\subsection{Website Builders}
+
+First of all, there are services such as Wix \cite{Wix} or SquareSpace \cite{SquareSpace} that allows you to design and publish a website via a drag and drop interface. They offer services on the web environment. While they mostly focus on the design aspects of website development, they offer pre-made customisable backends for specific use cases such as blogs and e-commerce websites.
+
+\subsection{Content Management Systems}
+
+Then there are Content Management Systems (CMS) like Wordpress \cite{Wordpress}, Drupal \cite{Drupal} and Joomla \cite{Joomla}. These services are not new and has been around for some time. They also offer services only for the web platform. It is also possible to create a front-end application using these services, but in order to go beyond a pre-made theme, they often required to have minimal front-end development knowledge. Moreover, they allow users to create their own data structures and provide the user interface to manipulate data. There are also Headless CMS services such as Contentful \cite{Contentful} and Strapi \cite{Strapi} that allows users to create and manage their data, but does not provide a front-end and allow the data to be consumed through an API from any front-end application.
+
+\subsection{Static Site Generators}
+
+Static site generation is a process of taking an input from the user and generating a static web content ready to be served by a web server. This input is typically Javascript code as many static site generators such as Gatsby \cite{Gatsby} and Next.js \cite{Nextjs} are based on Javascript frameworks and requires programming knowledge, but there are ones such as Jekyll \cite{Jekyll} that uses markdown syntax, and renders within a given theme.
+
+\subsection{Internal Tool Builders}
+
+These services are mostly intended for developers to use. They aim to help developers rapidly produce better and durable tools that are not user-facing and are to be used internally within a company. They provide GUI components, and integration options to number of services as well as direct databases. The intended use for these tools is to pull data from a number of data sources, process it and display it using the provided GUI components. Retool \cite{Retool} is a popular example that only targets the web platform, but there are also some similar tools in this category that also produces native-like experiences.
