Updates from Overleaf

--- a/thesis/paper/thesis.tex
+++ b/thesis/paper/thesis.tex
@@ -40,11 +40,11 @@
 
 
 % Abstract
-\input{sections/abstract}
+\input{sections/0_1_abstract}
 \newpage
 
 % Acknowledgements
-\input{sections/acknowledgements}
+\input{sections/0_2_acknowledgements}
 \newpage
 
 % Table of Contents
@@ -65,7 +65,7 @@
 \newpage
 \appendix
 \renewcommand{\chaptermark}[1]{\markboth{\MakeUppercase{\appendixname}\ \thechapter.\ #1}{}}
-\input{sections/appendix}
+\input{sections/7_appendix}
 
 % Bibliography
 \bibliographystyle{plain}
